{
  "version": 4,
  "terraform_version": "1.15.9",
  "serial": 209,
  "lineage": "9bf3b8be-16ac-b363-88cd-de7d98781f0c",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:136688660029:instance/i-07f3f74356d5ec20c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "utc-ssm-instance-profile",
            "id": "i-07f3f74356d5ec20c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c0435df270c8d430"
              }
            ],
            "primary_network_interface_id": "eni-0c0435df270c8d430",
            "private_dns": "ip-10-10-13-253.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.13.253",
            "public_dns": "ec2-52-204-203-61.compute-1.amazonaws.com",
            "public_ip": "52.204.203.61",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "utc-application"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "utc-application"
                },
                "throughput": 0,
                "volume_id": "vol-0fc5371abc5f08bcb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd25dd3960d57f80",
            "tags": {
              "Name": "Bastion Host (SSH)"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Bastion Host (SSH)",
              "Project": "utc-application"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04fdf9497cad637ff"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "i-07f3f74356d5ec20c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.aws_iam_instance_profile.ssm_profile",
            "module.compute.aws_iam_role.ssm_role",
            "module.security.aws_security_group.bastion",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:136688660029:loadbalancer/app/utc-alb/e74992cff17e7f59",
            "arn_suffix": "app/utc-alb/e74992cff17e7f59",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "utc-alb-1193164194.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:136688660029:loadbalancer/app/utc-alb/e74992cff17e7f59",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "utc-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-007bd88d26a80b524"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-073c1821726e364e6"
              },
              {
                "subnet_id": "subnet-0bd25dd3960d57f80"
              },
              {
                "subnet_id": "subnet-0d3e6a4649625a8aa"
              }
            ],
            "subnets": [
              "subnet-073c1821726e364e6",
              "subnet-0bd25dd3960d57f80",
              "subnet-0d3e6a4649625a8aa"
            ],
            "tags": {
              "Name": "utc-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "utc-alb",
              "Project": "utc-application"
            },
            "vpc_id": "vpc-0804406c1176c57ef",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:136688660029:loadbalancer/app/utc-alb/e74992cff17e7f59"
          },
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:136688660029:listener/app/utc-alb/e74992cff17e7f59/08797762be631125",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:136688660029:listener/app/utc-alb/e74992cff17e7f59/08797762be631125",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:136688660029:loadbalancer/app/utc-alb/e74992cff17e7f59",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:136688660029:listener/app/utc-alb/e74992cff17e7f59/08797762be631125"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.this",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:136688660029:listener/app/utc-alb/e74992cff17e7f59/ebc2a62c3b29332b",
            "certificate_arn": "arn:aws:acm:us-east-1:136688660029:certificate/89955d83-12e4-49d6-a262-5eccffbb5f50",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:136688660029:targetgroup/utc-target-group/a054cdda1e8b55a3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:136688660029:listener/app/utc-alb/e74992cff17e7f59/ebc2a62c3b29332b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:136688660029:loadbalancer/app/utc-alb/e74992cff17e7f59",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:136688660029:listener/app/utc-alb/e74992cff17e7f59/ebc2a62c3b29332b"
          },
          "dependencies": [
            "module.load_balancer.aws_acm_certificate.this",
            "module.load_balancer.aws_acm_certificate_validation.this",
            "module.load_balancer.aws_lb.this",
            "module.load_balancer.aws_lb_target_group.this",
            "module.load_balancer.aws_route53_record.cert_validation",
            "module.load_balancer.data.aws_route53_zone.existing",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:136688660029:targetgroup/utc-target-group/a054cdda1e8b55a3",
            "arn_suffix": "targetgroup/utc-target-group/a054cdda1e8b55a3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:136688660029:targetgroup/utc-target-group/a054cdda1e8b55a3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:136688660029:loadbalancer/app/utc-alb/e74992cff17e7f59"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "utc-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:136688660029:targetgroup/utc-target-group/a054cdda1e8b55a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group/sg-007bd88d26a80b524",
            "description": "Allow HTTP/HTTPS from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007bd88d26a80b524",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "136688660029",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ALB-SG",
              "Project": "utc-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sg-007bd88d26a80b524",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group/sg-0a4e8a5346547ed89",
            "description": "Allow HTTP from ALB and SSH from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4e8a5346547ed89",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04fdf9497cad637ff"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-007bd88d26a80b524"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "App-server-SG",
            "name_prefix": "",
            "owner_id": "136688660029",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "App-server-SG"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "App-server-SG",
              "Project": "utc-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sg-0a4e8a5346547ed89",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group/sg-04fdf9497cad637ff",
            "description": "Allow SSH from specific IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fdf9497cad637ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "1.2.3.4/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion-host-SG",
            "name_prefix": "",
            "owner_id": "136688660029",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-host-SG"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Bastion-host-SG",
              "Project": "utc-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sg-04fdf9497cad637ff",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group/sg-020480cea1d0e72fb",
            "description": "Allow MySQL from App Servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020480cea1d0e72fb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a4e8a5346547ed89"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database-SG",
            "name_prefix": "",
            "owner_id": "136688660029",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database-SG"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Database-SG",
              "Project": "utc-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sg-020480cea1d0e72fb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group-rule/sgr-0caef1d1568d2742f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0caef1d1568d2742f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-007bd88d26a80b524",
            "security_group_rule_id": "sgr-0caef1d1568d2742f",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sgr-0caef1d1568d2742f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "app_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group-rule/sgr-054b3b06f4faaa87a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-054b3b06f4faaa87a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a4e8a5346547ed89",
            "security_group_rule_id": "sgr-054b3b06f4faaa87a",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sgr-054b3b06f4faaa87a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.app",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bastion_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group-rule/sgr-04c16aca395b13ba4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04c16aca395b13ba4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-04fdf9497cad637ff",
            "security_group_rule_id": "sgr-04c16aca395b13ba4",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sgr-04c16aca395b13ba4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.bastion",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group-rule/sgr-0079702e02979d204",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0079702e02979d204",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-020480cea1d0e72fb",
            "security_group_rule_id": "sgr-0079702e02979d204",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sgr-0079702e02979d204",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.db",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group-rule/sgr-006549a1ac09aeb0c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-006549a1ac09aeb0c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-007bd88d26a80b524",
            "security_group_rule_id": "sgr-006549a1ac09aeb0c",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sgr-006549a1ac09aeb0c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group-rule/sgr-038dba5297dfeb71a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-038dba5297dfeb71a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-007bd88d26a80b524",
            "security_group_rule_id": "sgr-038dba5297dfeb71a",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sgr-038dba5297dfeb71a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_http_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group-rule/sgr-05dd7f01481769eed",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-05dd7f01481769eed",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-007bd88d26a80b524",
            "region": "us-east-1",
            "security_group_id": "sg-0a4e8a5346547ed89",
            "security_group_rule_id": "sgr-05dd7f01481769eed",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sgr-05dd7f01481769eed",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.app",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group-rule/sgr-0ca41f8191aea3340",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0ca41f8191aea3340",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-04fdf9497cad637ff",
            "region": "us-east-1",
            "security_group_id": "sg-0a4e8a5346547ed89",
            "security_group_rule_id": "sgr-0ca41f8191aea3340",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sgr-0ca41f8191aea3340",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.bastion",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group-rule/sgr-006e972fc49d28114",
            "cidr_ipv4": "1.2.3.4/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-006e972fc49d28114",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-04fdf9497cad637ff",
            "security_group_rule_id": "sgr-006e972fc49d28114",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sgr-006e972fc49d28114",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.bastion",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_mysql_from_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group-rule/sgr-089c8c63607305e3a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-089c8c63607305e3a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a4e8a5346547ed89",
            "region": "us-east-1",
            "security_group_id": "sg-020480cea1d0e72fb",
            "security_group_rule_id": "sgr-089c8c63607305e3a",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sgr-089c8c63607305e3a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.db",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.storage",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group/sg-0c9147312636b26cb",
            "description": "Allow NFS traffic from App Servers",
            "egress": [],
            "id": "sg-0c9147312636b26cb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a4e8a5346547ed89"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "EFS-Mount-SG",
            "name_prefix": "",
            "owner_id": "136688660029",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sg-0c9147312636b26cb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.storage",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "efs_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:security-group-rule/sgr-0c89f45d9baf8ee8f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2049,
            "id": "sgr-0c89f45d9baf8ee8f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a4e8a5346547ed89",
            "region": "us-east-1",
            "security_group_id": "sg-0c9147312636b26cb",
            "security_group_rule_id": "sgr-0c89f45d9baf8ee8f",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "utc-application"
            },
            "to_port": 2049
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "sgr-0c89f45d9baf8ee8f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.app",
            "module.storage.aws_security_group.efs",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa5443d0f23d8a0f",
            "arn": "arn:aws:ec2:us-east-1:136688660029:elastic-ip/eipalloc-0fa5443d0f23d8a0f",
            "association_id": "eipassoc-012f51b803de9742c",
            "domain": "vpc",
            "id": "eipalloc-0fa5443d0f23d8a0f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0859a079d08846a71",
            "private_dns": "ip-10-10-12-84.ec2.internal",
            "private_ip": "10.10.12.84",
            "public_dns": "ec2-34-231-46-119.compute-1.amazonaws.com",
            "public_ip": "34.231.46.119",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "utc-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "utc-nat-eip",
              "Project": "utc-application"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "eipalloc-0fa5443d0f23d8a0f",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:internet-gateway/igw-0f36c8a39a678d257",
            "id": "igw-0f36c8a39a678d257",
            "owner_id": "136688660029",
            "region": "us-east-1",
            "tags": {
              "Name": "utc-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "utc-igw",
              "Project": "utc-application"
            },
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "igw-0f36c8a39a678d257",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa5443d0f23d8a0f",
            "association_id": "eipassoc-012f51b803de9742c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fc6e3deae9284cdd",
            "network_interface_id": "eni-0859a079d08846a71",
            "private_ip": "10.10.12.84",
            "public_ip": "34.231.46.119",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bd25dd3960d57f80",
            "tags": {
              "Name": "utc-single-nat-gw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "utc-single-nat-gw",
              "Project": "utc-application"
            },
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "nat-0fc6e3deae9284cdd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:route-table/rtb-0985abcf755465a28",
            "id": "rtb-0985abcf755465a28",
            "owner_id": "136688660029",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fc6e3deae9284cdd",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "utc-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "utc-private-rt",
              "Project": "utc-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "rtb-0985abcf755465a28",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:route-table/rtb-082d024514acdda4b",
            "id": "rtb-082d024514acdda4b",
            "owner_id": "136688660029",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f36c8a39a678d257",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "utc-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "utc-public-rt",
              "Project": "utc-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "rtb-082d024514acdda4b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bca81616f7e1478",
            "region": "us-east-1",
            "route_table_id": "rtb-0985abcf755465a28",
            "subnet_id": "subnet-0ace6d35d308642a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "rtbassoc-09bca81616f7e1478",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c373dc9d110fc439",
            "region": "us-east-1",
            "route_table_id": "rtb-0985abcf755465a28",
            "subnet_id": "subnet-0ab4b6e7c15547db9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "rtbassoc-0c373dc9d110fc439",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0593cc02ed6eec233",
            "region": "us-east-1",
            "route_table_id": "rtb-0985abcf755465a28",
            "subnet_id": "subnet-0aa7cbffc62db587d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "rtbassoc-0593cc02ed6eec233",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a842111a000da096",
            "region": "us-east-1",
            "route_table_id": "rtb-0985abcf755465a28",
            "subnet_id": "subnet-0daa16feefe6c669f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "rtbassoc-0a842111a000da096",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1feb8ae2a2b960e",
            "region": "us-east-1",
            "route_table_id": "rtb-0985abcf755465a28",
            "subnet_id": "subnet-06b3d954855987609"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "rtbassoc-0e1feb8ae2a2b960e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e51ece1cb63290b9",
            "region": "us-east-1",
            "route_table_id": "rtb-0985abcf755465a28",
            "subnet_id": "subnet-009ed3cea68f7411c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "rtbassoc-0e51ece1cb63290b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f3c3b977ed9fdd8",
            "region": "us-east-1",
            "route_table_id": "rtb-082d024514acdda4b",
            "subnet_id": "subnet-0bd25dd3960d57f80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "rtbassoc-00f3c3b977ed9fdd8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e7d55d500ba4f9b",
            "region": "us-east-1",
            "route_table_id": "rtb-082d024514acdda4b",
            "subnet_id": "subnet-073c1821726e364e6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "rtbassoc-09e7d55d500ba4f9b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0500da565d67d9d49",
            "region": "us-east-1",
            "route_table_id": "rtb-082d024514acdda4b",
            "subnet_id": "subnet-0d3e6a4649625a8aa"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "rtbassoc-0500da565d67d9d49",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:subnet/subnet-0ace6d35d308642a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ace6d35d308642a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136688660029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private Subnet 1a (App)"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Private Subnet 1a (App)",
              "Project": "utc-application"
            },
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "subnet-0ace6d35d308642a8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:subnet/subnet-0ab4b6e7c15547db9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab4b6e7c15547db9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136688660029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private Subnet 1b (App)"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Private Subnet 1b (App)",
              "Project": "utc-application"
            },
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "subnet-0ab4b6e7c15547db9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:subnet/subnet-0aa7cbffc62db587d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa7cbffc62db587d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136688660029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private Subnet 1c (App)"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Private Subnet 1c (App)",
              "Project": "utc-application"
            },
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "subnet-0aa7cbffc62db587d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:subnet/subnet-0daa16feefe6c669f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0daa16feefe6c669f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136688660029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private Subnet 1a (DB)"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Private Subnet 1a (DB)",
              "Project": "utc-application"
            },
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "subnet-0daa16feefe6c669f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:subnet/subnet-06b3d954855987609",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b3d954855987609",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136688660029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private Subnet 1b (DB)"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Private Subnet 1b (DB)",
              "Project": "utc-application"
            },
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "subnet-06b3d954855987609",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:subnet/subnet-009ed3cea68f7411c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009ed3cea68f7411c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136688660029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private Subnet 1c (DB)"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Private Subnet 1c (DB)",
              "Project": "utc-application"
            },
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "subnet-009ed3cea68f7411c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:subnet/subnet-0bd25dd3960d57f80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd25dd3960d57f80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "136688660029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public Subnet 1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 1a",
              "Project": "utc-application"
            },
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "subnet-0bd25dd3960d57f80",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:subnet/subnet-073c1821726e364e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073c1821726e364e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "136688660029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public Subnet 1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 1b",
              "Project": "utc-application"
            },
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "subnet-073c1821726e364e6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:subnet/subnet-0d3e6a4649625a8aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3e6a4649625a8aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "136688660029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public Subnet 1c"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 1c",
              "Project": "utc-application"
            },
            "vpc_id": "vpc-0804406c1176c57ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "subnet-0d3e6a4649625a8aa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136688660029:vpc/vpc-0804406c1176c57ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0d7854b5ece029ebe",
            "default_route_table_id": "rtb-0ee46aba46b4c17ca",
            "default_security_group_id": "sg-09b188b266b505bd8",
            "dhcp_options_id": "dopt-03e978b5f9d9dbe0c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0804406c1176c57ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee46aba46b4c17ca",
            "owner_id": "136688660029",
            "region": "us-east-1",
            "tags": {
              "Name": "utc-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "utc-vpc",
              "Project": "utc-application"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "136688660029",
            "id": "vpc-0804406c1176c57ef",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}